# read_transactions_fm

./: .buildinfo  .gitignore  LICENSE  Readme.html  Readme.md  cli.html  credentials_ariva_example.txt  credentials_example.txt  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-docs.txt  requirements.txt  run.py  search.html  searchindex.js  setup.bat  start.bat
.doctrees/: Readme.doctree  cli.doctree  environment.pickle  index.doctree
.doctrees/api/: index.doctree
.doctrees/api/read_transactions/: index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/read_transactions/: index.doctree
.github/workflows/: build.yaml  sphinx.yaml
WebCrawler/: AmazonZiniaCrawler.py  AmexCrawler.py  ArivaCrawler.py  Base.py  Logger.py  TradeRepublicCrawler.py  WebCrawler.py  __init__.py
_sources/: cli.md.txt  index.md.txt
_sources/api/: index.rst.txt
_sources/api/read_transactions/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/read_transactions/: index.rst.txt
api/: index.html
api/read_transactions/: index.html
api/read_transactions/__main__/: index.html
api/read_transactions/cli/: index.html
api/read_transactions/config/: index.html
api/read_transactions/logger/: index.html
api/read_transactions/webcrawler/: index.html
autoapi/: index.html
autoapi/read_transactions/: index.html
autoapi/read_transactions/__main__/: index.html
docs/: Readme.md  cli.md  conf.py  index.md
gui/: gui_main.py
src/read_transactions/: __init__.py  __main__.py  cli.py  config.py  logger.py
(+73 files in other folders)
